# GPAChess

./: .gitignore  CMakeLists.txt  DEVELOP.md  MECHANICS.md  README.md
assets/: resources.qrc
assets/database/: enemy.db  role.db
assets/entities/: enemy.db  role.db
src/: database_manager.cpp  entry.cpp  entry.ui  game_manager.cpp  game_manager.h  logo_player.h  main.cpp  mainwindow.h  print.h  renderer.cpp  renderer.h  shop.ui  shop_window.cpp  shop_window.ui  state.cpp  state.h  unit_graphics_item.cpp
src/core/: game_manager.cpp
src/entity/: ally_behavior.h  base_behavior.h  enemy_behavior.h
src/entity/allies/: ally_factory.cpp  alpha_behavior.cpp  alpha_behavior.h  beta_behavior.cpp  beta_behavior.h
src/entity/allies/alpha/: alpha_behavior.cpp  alpha_behavior.h
src/entity/allies/beta/: beta_behavior.cpp  beta_behavior.h
src/entity/allies/hachimi/: hachimi_behavior.cpp  hachimi_behavior.h
src/entity/allies/tower/: tower_behavior.cpp  (+1 more)
src/entity/enemies/: alpha_behavior.cpp  alpha_behavior.h  beta_behavior.cpp  beta_behavior.h  enemy_factory.cpp
src/entity/tower/: tower_behavior.cpp  tower_behavior.h
src/include/: database_manager.h  game_manager.h  logo_player.h  mainwindow.h  shop_window.h  state.h  unit_graphics_item.h
src/include/entity/: ally_behavior.h  base_behavior.h  enemy_behavior.h
src/include/render/: renderer.h
src/render/: renderer.cpp
src/utils/: database_manager.cpp  database_manager.h  logo_player.cpp  logo_player.h  print.cpp  registration.cpp  registration.h  registration.ui  shop_window.cpp  shop_window.h  unit_graphics_item.h
(+12 files in other folders)
